<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:layout="@layout/custom_float_label"
            android:textColor="@color/color_label"
            android:textStyle="normal"
            android:typeface="sans" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:layout="@layout/custom_float_label"
            android:textColor="@color/color_label"
            android:textStyle="normal"
            android:typeface="sans" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_forgot_password"
            android:text="@string/btn_login"
            android:textColor="@color/color_label" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToForgetPasswordScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_forget"
            android:textAllCaps="false"
            android:textColor="@color/color_label"
            android:textSize="16dp" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/color_label"
            android:textSize="18dp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>