<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/paymentFor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ship_First"
            android:layout_marginTop="1dp"
            android:padding="2dp"
            android:text="V-Mobile Kota Casablanka"
            android:textColor="@color/input_login"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtSlotName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ship_First"
            android:layout_marginTop="1dp"
            android:padding="2dp"
            android:text="Area Parkir : "
            android:textColor="@color/input_login"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:padding="2dp"
            android:text="GRAND TOTAL : Rp 15.000"
            android:textColor="@color/input_login"
            android:textSize="18sp" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/noCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cc"
            android:inputType="number"
            android:layout="@layout/custom_float_label"
            android:text="4811111111111114"
            android:textColor="@color/color_label"
            android:textStyle="normal"
            android:typeface="sans" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/card_expire_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_expire_month"
            android:inputType="number"
            android:layout="@layout/custom_float_label"
            android:text="12"
            android:textColor="@color/color_label"
            android:textStyle="normal"
            android:typeface="sans" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/card_expire_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_expire_year"
            android:inputType="number"
            android:layout="@layout/custom_float_label"
            android:text="2020"
            android:textColor="@color/color_label"
            android:textStyle="normal"
            android:typeface="sans" />

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_cvv"
            android:inputType="number"
            android:layout="@layout/custom_float_label"
            android:text="123"
            android:textColor="@color/color_label"
            android:textStyle="normal"
            android:typeface="sans" />

        <!-- Pay Button -->

        <Button
            android:id="@+id/btnPay"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_forgot_password"
            android:text="@string/btn_pay"
            android:textColor="@color/color_label" />
    </LinearLayout>

</LinearLayout>