<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="top|center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/bookingCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_booking_code"
            android:inputType="textCapWords"
            android:layout="@layout/custom_float_label"
            android:textColor="@color/color_label"
            android:textStyle="normal"
            android:typeface="sans" />

        <!-- Check In Button -->

        <Button
            android:id="@+id/btnCheckIn"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dip"
            android:background="@drawable/button_forgot_password"
            android:text="@string/btn_check_booking_code"
            android:textColor="@color/color_label" />
    </LinearLayout>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/resultScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/resultLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtBookingName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/hint_booking_name"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/bookingName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtBookingPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/hint_booking_phone_no"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/bookingPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtBookingEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/hint_booking_email"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/bookingEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtBookingMall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/hint_booking_mall"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/bookingMall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtBookingId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/hint_booking_id"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/bookingId"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtBookingDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/hint_booking_date"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/bookingDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/txtBookingStatus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/hint_booking_status"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <TextView
                android:id="@+id/bookingStatus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/grey"
                android:inputType="textCapWords"
                android:padding="5dp"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <Button
                android:id="@+id/btnCheckInOk"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dip"
                android:background="@drawable/button_forgot_password"
                android:text="@string/btn_check_in"
                android:textColor="@color/color_label" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>